--- a/src/styles/pages/_landing.scss
+++ b/src/styles/pages/_landing.scss
@@ -17,6 +17,7 @@
       width: 100vw;
       max-width: 1180px;
       margin: 0 auto;
+      max-width: 100%;
 
       @include media("<=small") {
         display: none;
